# locality_aware

./: .gitignore  CMakeLists-original.txt  CMakeLists.txt  Doxyfile  LICENSE  README-MPI-ADVANCE.md  README.md  benchmark.flux  benchmark.slurm  chicoma_test.sh  extract_data.py  lassen_test.sh  make_build.sh  quartz_test.sh
benchmarks/: CMakeLists.txt  allgather_topology.cpp  allreduce.cpp  allreduce_topology.cpp  alltoall_crs.cpp  alltoall_rma.cpp  alltoall_topology.cpp  alltoallv_crs.cpp  alltoallv_rma.cpp  bruck_allgather.cpp  comm_creators.cpp  dynamic_p2p.cpp  gpu_allreduce.cpp  gpu_allreduce_ipc.cpp  gpu_alltoall.cpp  gpu_alltoallv.cpp  gpu_alltoallv_strongscaling.cpp  gpu_alltoallv_weakScaling.cpp  gpu_microbenchmarks.cpp  gpu_threaded_alltoall.cpp  managed_microbenchmarks.cpp  microbenchmarks.cpp  neighbor_collective.cpp  neighbor_collective_flip.cpp  network_discovery.cpp  p2p_alltoall.cpp  p2p_alltoallv.cpp  ping_pong.cpp  spmv.cpp  test_comm_setup.cpp  test_comm_setup_GPU.cpp  test_comm_setup_density.cpp  test_comm_setup_orig.cpp  threaded_p2p.cpp  timer.cpp  timer.hpp  torsten_standard_comm.cpp
benchmarks/job_scripts/: D_10_STANDARD_HOPPER_MANY_NODE.sh  D_10_STANDARD_HOPPER_MANY_NODES.sh  D_10_STANDARD_HOPPER_ONE_NODE.sh  D_10_TORSTEN_HOPPER_MANY_NODE.sh  D_10_TORSTEN_HOPPER_ONE_NODE.sh  GAMS10AM_STANDARD_HOPPER_MANY_NODES.sh  GAMS10AM_STANDARD_HOPPER_ONE_NODE.sh  GAMS10AM_TORSTEN_HOPPER_MANY_NODES.sh  GAMS10AM_TORSTEN_HOPPER_ONE_NODE.sh  RUN_ALL.sh  bcsstk01_STANDARD_HOPPER_MANY_NODE.sh  bcsstk01_STANDARD_HOPPER_ONE_NODE.sh  bcsstk01_TORSTEN_HOPPER_MANY_NODE.sh  bcsstk01_TORSTEN_HOPPER_ONE_NODE.sh  ch-5-b1_STANDARD_HOPPER_MANY_NODE.sh  ch-5-b1_STANDARD_HOPPER_ONE_NODE.sh  ch-5-b1_TORSTEN_HOPPER_MANY_NODE.sh  ch-5-b1_TORSTEN_HOPPER_ONE_NODE.sh  dw5-162_STANDARD_HOPPER_MANY_NODE.sh  dw5-162_STANDARD_HOPPER_ONE_NODE.sh  dw5-162_TORSTEN_HOPPER_MANY_NODE.sh  dw5-162_TORSTEN_HOPPER_ONE_NODE.sh  gams10a_STANDARD_HOPPER_MANY_NODE.sh  gams10a_STANDARD_HOPPER_ONE_NODE.sh  gams10a_TORSTEN_HOPPER_MANY_NODE.sh  gams10a_TORSTEN_HOPPER_ONE_NODE.sh  gams10am_STANDARD_HOPPER_MANY_NODE.sh  gams10am_STANDARD_HOPPER_ONE_NODE.sh  gams10am_TORSTEN_HOPPER_MANY_NODE.sh  gams10am_TORSTEN_HOPPER_ONE_NODE.sh  impcol_c_STANDARD_HOPPER_MANY_NODE.sh  impcol_c_STANDARD_HOPPER_ONE_NODE.sh  impcol_c_TORSTEN_HOPPER_MANY_NODE.sh  impcol_c_TORSTEN_HOPPER_ONE_NODE.sh  make_scripts.py  odepa400_STANDARD_HOPPER_MANY_NODE.sh  odepa400_STANDARD_HOPPER_ONE_NODE.sh  odepa400_TORSTEN_HOPPER_MANY_NODE.sh  odepa400_TORSTEN_HOPPER_ONE_NODE.sh  oscil_dcop_11_STANDARD_HOPPER_MANY_NODE.sh  (+15 more)
benchmarks/job_scripts/hopper/: D_10_STANDARD_HOPPER_MANY_NODE.sh  D_10_STANDARD_HOPPER_ONE_NODE.sh  D_10_TORSTEN_HOPPER_MANY_NODE.sh  D_10_TORSTEN_HOPPER_ONE_NODE.sh  RUN_ALL.sh  bcsstk01_STANDARD_HOPPER_MANY_NODE.sh  bcsstk01_STANDARD_HOPPER_ONE_NODE.sh  bcsstk01_TORSTEN_HOPPER_MANY_NODE.sh  bcsstk01_TORSTEN_HOPPER_ONE_NODE.sh  ch-5-b1_STANDARD_HOPPER_MANY_NODE.sh  ch-5-b1_STANDARD_HOPPER_ONE_NODE.sh  ch-5-b1_TORSTEN_HOPPER_MANY_NODE.sh  ch-5-b1_TORSTEN_HOPPER_ONE_NODE.sh  dwt-162_STANDARD_HOPPER_MANY_NODE.sh  dwt-162_STANDARD_HOPPER_ONE_NODE.sh  dwt-162_TORSTEN_HOPPER_MANY_NODE.sh  dwt-162_TORSTEN_HOPPER_ONE_NODE.sh  gams10a_STANDARD_HOPPER_MANY_NODE.sh  gams10a_STANDARD_HOPPER_ONE_NODE.sh  gams10a_TORSTEN_HOPPER_MANY_NODE.sh  gams10a_TORSTEN_HOPPER_ONE_NODE.sh  give_nodes.sh  test.sh  (+29 more)
benchmarks/unsupported/: microbenchmarks.cpp
include/: CMakeLists.txt  locality_aware.h
include/collective/: alltoall.h  alltoallv.h  collective.h
include/communicator/: MPIL_Info.h  comm.h  comm_data.h  info.h  locality_comm.h  mpil_comm.h
include/heterogeneous2/: gpu_alltoall.h  gpu_alltoallv.h
include/heterogenous/: gpu_alltoall.h  gpu_alltoallv.h
include/neighborhood/: MPIL_Graph.h  MPIL_Topo.h  dist_graph.h  neighbor.h  neighbor_init.h  neighbor_locality.h  neighbor_persistent.h  sparse_coll.h  topo.h
include/persistent/: MPIL_Request.h  neighbor_persistent.h  persistent.h
include/tests/: sparse_mat.hpp
include/utils/: MPIL_Alloc.h  gpu_utils.h  utils.h
openshmem/: CMakeLists.txt  Makefile  variety.sh
openshmem/bench/: bench_alltoallv.c
openshmem/include/: osh_alltoallv.h
openshmem/src/: osh_alltoallv.c
src/: CMakeLists.txt  comm_data.c  comm_data.h  comm_pkg.c  comm_pkg.h  comm_pkg.hpp  dist_graph.c  dist_graph.h  error.h  locality.cpp  locality_aware.h  locality_comm.c  locality_comm.h  mpi_advance.h  nap_comm.c  nap_comm.h  nap_communicate.cpp  nap_communicate.hpp  neighbor.c  neighbor.h  topo_data.hpp  topology.c  topology.h  utils.cpp  utils.h
src/collective/: CMakeLists.txt  allgather.c  allgather.h  allreduce.c  allreduce.h  alltoall.c  alltoall.h  alltoall_init.c  alltoall_init.h  alltoallv.c  alltoallv.h  bcast.c  bcast.h  collective.h  gather.c  gather.h  test.c
src/communicator/: CMakeLists.txt  clustering.c  clustering.h  comm_data.c  comm_pkg.c  comm_pkg.h  locality_comm.c  locality_comm.h  mpil_comm.c  mpix_comm.c  mpix_comm.h
src/heterogeneous/: CMakeLists.txt  gpu_allreduce.c  gpu_allreduce.h  gpu_alltoall.c  gpu_alltoall.h  gpu_alltoall_init.c  gpu_alltoall_init.h  gpu_alltoallv.c  gpu_alltoallv.h  gpu_neighbor_alltoallv.c
src/locality/: CMakeLists.txt  comm_data.c  comm_data.h  comm_pkg.c  locality.cpp  locality_comm.c  locality_comm.h  topology.c  topology.cpp  topology.h  topology.hpp
src/neighborhood/: CMakeLists.txt  alltoall_crs.cpp  alltoallv_crs.cpp  comm_creation.cpp  comm_creation.h  dist_graph.c  dist_graph.h  dist_topo.c  dist_topo.h  neighbor.c  neighbor.h  neighbor_init.c  neighbor_init.h  neighbor_locality.cpp  neighbor_persistent.c  neighbor_persistent.h  sparse_coll.c  sparse_coll.h  sparse_coll_utils.cpp
src/persistent/: CMakeLists.txt  neighbor_persistent.c  neighbor_persistent.h  persistent.c  persistent.h
src/tests/: CMakeLists.txt  compare.hpp  old_par_binary_IO.hpp  par_binary_IO.hpp  sparse_mat.hpp  test_alltoallv.cpp  test_matching.cpp  test_nap_comm.cpp
src/utils/: CMakeLists.txt  utils.cpp  utils.h  utils_cuda.c  utils_cuda.h  utils_hip.c  utils_hip.h
(+3283 files in other folders)
